Unreleased / planned
====================
- add missing tutorials and examples
- add missing API info

Known bugs
==========
- high GUI / windows sometimes crashes. Stop Kernel and use "cv2.destroyAllWindows()"


1.0.3
-----

- "dirpath" option added to container (at initialization and saving)
- unified measurement and visualization arguments (e.g. "text_size" now is "label_size" and "label_col" now is "label_colour")
- watershed algorithm implemented
- fix mask application in threshold
- create scale has now a mask function distinct of the template argument
- examples 1 and 2 added


1.0.2
-----
bugfix:
- pype: check if container has image or is NoneType
- Tutorials 1 + 2 improved
- Example 2 added (low throughput
- Docstrings to main, utils and preprocessing added

1.0.1
------
bugfix:
- if resize==1, load_images will pass none to pype

- Tutorial 1 (Python intro) and Tutorial 2 (Phenopype workflow) added
- added update and development to installation doc

1.0.0
------
new major release - breaks all existing versions



--------------------------------------------------------------------------------------------



0.10.0
------
bugfix:
- add_files with multiple ex- or include argument created duplicated filelists


0.9.0
------
- New feature: scale (former scale_maker) can now automatically equalize histograms via interpolation. Was mostly inspired by this SO question: https://stackoverflow.com/questions/32655686/histogram-matching-of-two-images-in-python-2-x
- renamed "scale_maker" method to "scale", and subfunctions, too. tutorials updated. more name changes to come towards a more intuitive naming convention
- show_img can now show multiple images when list is provided
- 

0.8.0
------
- scale_maker is completely reworked: now has zoom and onscreen notifications for mm/pixel info. measuring scale and making a template for detection are now two separate functions (measure_scale and make_scale_template)
- documentation and API reference for tracking module added 